tg_parser/tests/invalid/circuit_generate_with_transistor_invalid.tg
circuit BadCircuit(in a; out y) {
    generate i from 0 to 3 {
        pmos drain=y, gate=a, source=VDD;
    }
}
